assets/css/animations.css
.slide-up {
  clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0 100%);
  animation-name: slide-up;
  animation-timing-function: cubic-bezier(0, 0.56, 0, 0.93);
  animation-fill-mode: forwards;
  transition-property: scale, clip-path, transform;
}
@keyframes slide-up {
  to {
    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
  }
}

.slide-down {
  clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
  animation-name: slide-down;
  animation-timing-function: cubic-bezier(0, 0.56, 0, 0.93);
  animation-fill-mode: forwards;
  transition-property: scale, clip-path, transform;
}
@keyframes slide-down {
  to {
    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
  }
}

